--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,10 +10,12 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "leaflet": "^1.9.4",
     "mqtt": "^5.3.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.0"
   },
   "devDependencies": {
