--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,7 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.4",
+    "@mui/x-date-pickers": "^6.18.7",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "google-maps-react": "^2.0.6",
     "leaflet": "^1.9.4",
     "mqtt": "^5.3.3",
